--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "chess-games"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "chess.js": "^1.0.0-beta.4",
     "commander": "^11.1.0"
